Fixed font & overflow, updated "View All" button position

--- a/vite_frontend/src/user_component/styling/UserDashboard.css
+++ b/vite_frontend/src/user_component/styling/UserDashboard.css
@@ -45,7 +45,6 @@ body {
 }
 
 .account-selector {
-   font-family: "Hammersmith One";
    font-size: 14px;
    color: #ffffff;
    background-color: #003349;
@@ -225,6 +224,8 @@ body {
    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
    border-radius: 10px;
    padding: 10px;
+   display: flex;
+   flex-direction: column;
 }
 
 .view-all-button {
@@ -236,9 +237,10 @@ body {
    border: 2px solid #018fcc;
    border-radius: 10px;
    text-align: center;
-   padding: 4px;
    margin: 0px 12px 0px 12px;
    transition: 0.3s;
+   margin-top: auto !important;
+   margin-bottom: 12px !important;
 }
 
 .view-all-button:hover {
@@ -342,7 +344,7 @@ button {
 button:hover {
    background: linear-gradient(45deg, #d1f4ff 0%, #e8faff 100%);
    color: #003349;
-   transform: scale(1.05);
+   transform: scale(1.03);
 }
 
 button:active {
